[gd_scene load_steps=2 format=3 uid="uid://fqthdmg6vku3"]

[ext_resource type="Script" uid="uid://44rr2aqlge0l" path="res://ShopPanel.gd" id="1_6jwop"]

[node name="ShopPanel" type="CanvasLayer"]
script = ExtResource("1_6jwop")

[node name="Panel" type="Panel" parent="."]
offset_left = 387.0
offset_top = 167.0
offset_right = 1558.0
offset_bottom = 905.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Option2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Option3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Reset" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="Status" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
